--- a/pages/style.css
+++ b/pages/style.css
@@ -34,9 +34,87 @@
 }
 .delecious{
     padding-top: 10%;
-    padding-bottom: 20%;
+    padding-bottom: 15%;
     text-align: center;
     background-image: url(../images/banner-bg.jpg);
     background-size: cover;
     color: white;
+}
+.delecious h4{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    text-transform: uppercase;
+    margin-bottom: 18px;
+}
+.delecious h2{
+    font-family: 'Spectral', serif;
+    font-weight: 550;
+    text-transform: uppercase;
+    font-size: 44px;
+    margin-bottom: 20px;
+}
+.delecious p{
+    font-family: 'Spectral', serif;
+    margin-left: 30%;
+    width: 640px;
+    margin-bottom: 70px;
+}
+.primary-btn a{
+    text-decoration: none;
+    color: #fff;
+    background-color: #f2745f;
+    padding-top: 12px;
+    padding-right: 20px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    font-size: 12px;
+}
+.second{
+    margin-top: 10%;
+    display: flex;
+}
+.cook1{
+    margin-left: 300px;
+}
+.cook2{
+    margin-right: 300px;
+}
+.we{
+    margin-top: -60px;
+    margin-bottom: -60px;
+    padding-top: 30px;
+    padding-right: 20px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    text-align: center;
+    width: 500px;
+    height: 330px;
+    color: #fff;
+    background-color: #f2745f;
+}
+.call{
+    margin-top: 30px;
+    margin-left: 30px;
+    background-color: #a5aab936;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 300px;
+}
+.call p{
+    font-size: 12px;
+}
+.we h6{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.secondary-btn a{
+    text-decoration: none;
+    color:  #f2745f;
+    background-color: #fff;
+    padding-top: 12px;
+    padding-right: 20px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    font-size: 12px;
 }
