--- a/pages/style.css
+++ b/pages/style.css
@@ -77,18 +77,16 @@
 .cook1{
     margin-left: 300px;
 }
-.cook2{
-    margin-right: 300px;
-}
 .we{
     margin-top: -60px;
     margin-bottom: -60px;
+    margin-left: 85px;
     padding-top: 30px;
     padding-right: 20px;
     padding-bottom: 12px;
     padding-left: 20px;
     text-align: center;
-    width: 500px;
+    width: 400px;
     height: 330px;
     color: #fff;
     background-color: #f2745f;
@@ -117,4 +115,78 @@
     padding-bottom: 12px;
     padding-left: 20px;
     font-size: 12px;
+}
+.eeee{
+    margin-top: 10%;
+    padding-left: 250px;
+    padding-right: 200px;
+    display: flex;
+}
+.eeee img{
+    border: 10px solid #eaf0ff;
+}
+.eeee p{
+    font-size: 22px;
+    font-weight: 400;
+    padding-left: 50px;
+}
+.third{
+    background-image: url(../images/book-bg.jpg);
+    background-size: cover;
+    margin-top: 60px;
+}
+.third H2{
+    font-size: 24px;
+    font-weight: 600;
+    font-size: 21px;
+    color: #fff;
+    text-align: center;
+    margin-top: 80px;
+    margin-left: 36%;
+    width: 400px;
+}
+.third img{
+    margin-top: 80px;
+    margin-bottom: 20%;
+    margin-left: 50%;
+    width: 400px;
+    height: 290px;
+}
+form{
+    margin-top: 80px;
+    background-color: #fff;
+    text-align: center;
+    width: 350px;
+    height: 290px;
+    margin-left: -14px;
+}
+.day select{
+    margin-left: 30px;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #9a9a9a;
+    border-right: none;
+    border-left: none;
+    border-top: none;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 30px;
+}
+.hour select{
+    margin-right: 20px;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #9a9a9a;
+    border-right: none;
+    border-left: none;
+    border-top: none;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 30px;
+}
+.third h4{
+    color: #363e50;
+    font-family: 'Spectral', serif;
+    font-size: 28px;
+    padding-top: 30px;
 }
