--- a/pages/style.css
+++ b/pages/style.css
@@ -1,15 +1,18 @@
 .header{
+    width: 1546px;
     font-family: 'Spectral', serif;
     font-size: 64px;
     color: #121212;
     font-style: italic;
     text-align: center;
+    margin-left: -10px;
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: #d8deedd3;
     border-bottom: 1px solid #c9d3ee;
 }
 .navbar{
+    width: 1546px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 30%;
@@ -33,6 +36,7 @@
     border-top-width: medium;
 }
 .delecious{
+    width: 1560px;
     padding-top: 10%;
     padding-bottom: 15%;
     text-align: center;
@@ -71,6 +75,7 @@
     font-size: 12px;
 }
 .second{
+    width: 1560px;
     margin-top: 10%;
     display: flex;
 }
@@ -131,6 +136,7 @@
     padding-left: 50px;
 }
 .third{
+    width: 1560px;
     background-image: url(../images/book-bg.jpg);
     background-size: cover;
     margin-top: 60px;
@@ -156,32 +162,35 @@ form{
     margin-top: 80px;
     background-color: #fff;
     text-align: center;
-    width: 350px;
+    width: 400px;
     height: 290px;
     margin-left: -14px;
 }
 .day select{
+    text-align: left;
     margin-left: 30px;
-    padding-left: 15px;
+    padding-left: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-right: 40px;
     color: #9a9a9a;
     border-right: none;
     border-left: none;
     border-top: none;
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid #eee;
     margin-bottom: 30px;
 }
 .hour select{
     margin-right: 20px;
-    padding-left: 15px;
+    padding-left: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-right: 40px;
     color: #9a9a9a;
     border-right: none;
     border-left: none;
     border-top: none;
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid #eee;
     margin-bottom: 30px;
 }
 .third h4{
@@ -189,4 +198,79 @@ form{
     font-family: 'Spectral', serif;
     font-size: 28px;
     padding-top: 30px;
+}
+.name input{
+    width: 150px;
+    height: 30px;
+    font-size: 15px;
+    margin-left: 35px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: -40px;
+    color: #9a9a9a;
+    border-right: none;
+    border-left: none;
+    border-top: none;
+    border-bottom: 2px solid #eee;
+    margin-bottom: 30px;
+}
+.number input{
+    width: 150px;
+    height: 30px;
+    font-size: 15px;
+    margin-left: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    color: #9a9a9a;
+    border-right: none;
+    border-left: none;
+    border-top: none;
+    border-bottom: 2px solid #eee;
+    margin-bottom: 30px;
+}
+.persons select{
+    width: 150px;
+    margin-right: 20px;
+    margin-left: 30px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #9a9a9a;
+    border-right: none;
+    border-left: none;
+    border-top: none;
+    border-bottom: 2px solid #eee;
+    margin-bottom: 30px;
+}
+.bookbtn a{
+    font-size: 14px;
+    margin-right: 20px;
+    padding-left: 40px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    padding-right: 40px;
+}
+.DOWNLOAD{
+    background-color: #f2745f;
+    width: 1560px;
+    height: 200px;
+    text-align: center;
+}
+.DOWNLOAD h4{
+    margin-top: 70px;
+    margin-bottom: 40px;
+    color: #fff;
+}
+.third-btn a{
+    text-decoration: none;
+    color:  #f2745f;
+    background-color: #fff;
+    padding-top: 12px;
+    padding-right: 20px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    font-size: 12px;
 }
