--- a/pages/style.css
+++ b/pages/style.css
@@ -274,3 +274,75 @@ form{
     padding-left: 20px;
     font-size: 12px;
 }
+.breakfast{
+    margin-top: 6%;
+    margin-bottom: 70px;
+    margin-left: 40%;
+    width: 500px;
+}
+.card{
+    width: 300px;
+    height: 340px;
+}
+.card1{
+    background-color: #d8deed85;
+    margin-left: 15%;
+    width: 360px;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.card1 h4{
+    width: 300px;
+    margin-bottom: 30px;
+}
+.card2{
+    background-color: #d8deed85;
+    margin-left: 2%;
+    width: 360px;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.card2 h4{
+    width: 300px;
+    margin-bottom: 30px;
+}
+.card3{
+    background-color: #d8deed85;
+    margin-left: 2%;
+    width: 360px;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.card3 h4{
+    width: 300px;
+    margin-bottom: 30px;
+}
+.card-title{
+    margin-left: 18px;
+    margin-bottom: -10px;
+}
+.card-body p{
+   font-size: 14px;
+}
+.price{
+    color: #f2745f;
+    width: 81px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    margin-top: -39px;
+    margin-left: 73%;
+    background-color: rgba(250, 250, 250, 0.9);
+}
+.blog{
+    margin-top: 70px;
+    text-align: center;
+    background-color: #d8deed85;
+}
+.blog h4{
+    margin-top: 80px;
+}
