--- a/pages/style.css
+++ b/pages/style.css
@@ -346,3 +346,142 @@ form{
 .blog h4{
     margin-top: 80px;
 }
+.blog2{
+    margin-top: -240px;
+    margin-left: 50%;
+    width: 300px;
+    background-color: #fff;
+    text-align: left;
+}
+.blog2 h5{
+    font-family: 'Spectral', serif;
+    color: #121212;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+.blog2 h6{
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.blog2 p{
+    font-size: 13px;
+}
+.blog2 a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 550;
+    color: #f2745f;
+}
+.content{
+    margin-top: 60px;
+    margin-left: 30%;
+}
+.content2{
+    margin-top: 60px;
+    margin-left: 20px;
+}
+.blog3{
+    margin-top: -240px;
+    margin-left: 38%;
+    width: 300px;
+    background-color: #fff;
+    text-align: left;
+}
+.blog3 h5{
+    font-family: 'Spectral', serif;
+    color: #121212;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+.blog3 h6{
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.blog3 p{
+    font-size: 13px;
+}
+.blog3 a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 550;
+    color: #f2745f;
+}
+.content3{
+    margin-left: 30%;
+}
+.blog4{
+    margin-top: -240px;
+    margin-left: 50%;
+    width: 300px;
+    background-color: #fff;
+    text-align: left;
+}
+.blog4 h5{
+    font-family: 'Spectral', serif;
+    color: #121212;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+.blog4 h6{
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.blog4 p{
+    font-size: 13px;
+}
+.blog4 a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 550;
+    color: #f2745f;
+}
+.content4{
+    margin-left: 20px;
+}
+.blog5{
+    margin-top: -240px;
+    margin-left: 38%;
+    width: 300px;
+    background-color: #fff;
+    text-align: left;
+}
+.blog5 h5{
+    font-family: 'Spectral', serif;
+    color: #121212;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+.blog5 h6{
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.blog5 p{
+    font-size: 13px;
+}
+.blog5 a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 550;
+    color: #f2745f;
+}
+.date{
+    color: #f2745f;
+    width: 120px;
+    position: absolute;
+    left: 246px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: rgba(250, 250, 250, 0.9);
+}
+.date2{
+    color: #f2745f;
+    width: 120px;
+    position: absolute;
+    left: 246px;
+    padding-top: 5px;
+    background-color: rgba(250, 250, 250, 0.9);
+}
